--- a/experiment/html/work1.html
+++ b/experiment/html/work1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<script src="js/work1.js"></script><!--引入js-->
+		<script src="../js/work1.js"></script><!--引入js-->
 	</head>
 	<body>
 
